--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
 	</header>
 	<section>
@@ -79,16 +80,450 @@
 			</div>
 		</div>
 	</section>
-	<section>
+	<section class="features gutter_bottom">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6"></div>
-				<div class="offset-md-2 col-md-4"></div>
+				<div class="col-md-6">
+					<h2 class="gradient text">Композитная<br> кровля из Бельгии</h2>
+					<div class="fz18">Компания Metroline является официальным дилером бельгийского концерна "Metroline Europe NV" в России. Высокое качество композитной кровли, цена от прямого производителя Metroline - два аргумента, чтобы сделать правильный выбор.</div>
+					<div class="features_numbers d-flex">
+						<div class="features_numbers_el d-flex align-items-center">
+							<span class="gradient text">10</span><span>Коллекций<br> кровли</span></span>
+						</div>
+						<div class="features_numbers_el d-flex align-items-center">
+							<span class="gradient text">24</span><span>Цветовых<br>  решения</span></</span>
+						</div>
+						<div class="features_numbers_el d-flex align-items-center">
+							<span class="gradient text">250</span><span>Партнеров<br>  в России</span></</span>
+						</div>
+					</div>
+				</div>
+				<div class="offset-md-2 col-md-4">
+					<div class="features_right">
+						<ul class="features_right_list">
+							<li class="features_right_list_first"><span class="head">Пожаробезопасность</span><span>Высокая стойкость<br> к открытому огню</span></li>
+							<li class="features_right_list_scnd"><span class="head">Бесшумность</span><span>Кровля Метротайл не шумит<br> при дожде и граде</span></li>
+							<li class="features_right_list_thrd"><span class="head">Красота</span><span>Гранулят натурального камня<br> придаёт красоту <br>
+и респектабельность</span></li>
+							<li class="features_right_list_frth"><span class="head">Долговечность</span><span>Высокую защиту металла<br>
+от коррозии и катодную защита<br>
+в месте обреза листа</span></li>
+							<li class="features_right_list_ffth"><span class="head">Цена</span><span>Европейское качество <br>
+по доступной стоимости</span></li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
-	</div>
+	<section class="index_slider gutter_bottom gradient_bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+				<h2 class="gradient text">Коллекции metrotile</h2>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div  id="slider_index2" class="owl-carousel slider_index2">
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
 
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_new gradient">новинка</div>
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+				<h2 class="gradient text">доборные элементы</h2>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div id="slider_index3" class="owl-carousel slider_index2">
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_new gradient">новинка</div>
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+						<div class="catalog_item">
+							<div class="catalog_item_img">
+								<img src="img/slider_index2.png" alt="slider_index2">
+							</div>
+							<div class="catalog_item_disc">
+								<a href="#">MetroBond</a>
+								<span>от 586</span>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="professionals gutter_top">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<h3 class="gradient text">Архитекторам</h3></div>
+				<div class="col-md-4">
+					<h3 class="gradient text">Домо—<br>владельцам</h3></div>
+				<div class="col-md-4">
+					<h3 class="gradient text">Застройщикам</h3></div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="professionals_disc">Приглашаем к сотрудничеству,<br> 
+уверены оно может быть успешным <br> 
+и взаимовыгодным!</div>
+				</div>
+				<div class="col-md-4">
+					<div>Выбирайте любое цветовое решение <br> 
+и купить композитную металлочерепицу, <br> 
+оставив заявку на нашем сайте.</div>
+				</div>
+				<div class="col-md-4">
+					<div>Высокое качество материалов,<br>   бельгийскаятехнология и выгодные<br>  условия сотрудничества.</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+				<div class="professionals_disc_links">
+					<a href="#">Сотрудничество</a>
+					<a href="#">Модели  и текстуры</a>
+				</div></div>
+				<div class="col-md-4">
+				<div class="professionals_disc_links">
+					<a href="#">монтаж</a>
+					<a href="#">Расчёт</a>
+				</div></div>
+				<div class="col-md-4">
+				<div class="professionals_disc_links">
+					<a href="#">Сотрудничество</a>
+					<a href="#">Условия</a>
+				</div></div>
+			</div>
+			<div class="row gutter_top">
+				<div class="col-12">
+					<div class="professionals_banner d-flex justify-content-center align-items-center">
+						<div>Профессиональный монтаж композитной кровли<a href="#" class="but">Наши предложения</a></div>
+					</div>
+				</div>
+			</div>
+			<div class="row gutter_top gutter_bottom">
+				<div class="col-md-3">
+						<h2 class="gradient text no_border gutter_no">Композитная<br>кровля<br>Metrotile</h2>
+				</div>
+					<div class="offset-md-1 col-md-8">Образовавшись в 1997 году, «Metrotile Europe NV» очень быстро набрала мировую популярность. Композитной черепицей Metrotile покрыто более 4 млн. кв. м, в 85 странах мира.  Остановив свой выбор на Metrotile,  Вы приобретаете европейское качество по доступной стоимости. </div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<section class="news gradient_bg gutter_top gutter_bottom">
+					<div class="container">
+						<div class="row">
+					<div class="col-12">
+					<div class="news_tabs">
+						<a href="#" class="gradient text">Новости</a>
+						<a href="">Акции</a>
+						<a href="">Публикации</a>
+					</div>
+					<div class="counter"></div>
+					<div id="slider_index4" class="owl-carousel slider_index2">
+						<div class="news_item">
+							<div class="news_item_img">
+								<img src="img/news1.png" alt="slider_index4">
+							</div>
+							<div class="news_item_disc">
+								<div class="news_item_date">5 января</div>
+								<a class="news_item_head">Юбилей — 20 лет!</a>
+								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
+						<div class="news_item">
+							<div class="news_item_img">
+								<img src="img/news1.png" alt="slider_index4">
+							</div>
+							<div class="news_item_disc">
+								<div class="news_item_date">5 января</div>
+								<a class="news_item_head">Юбилей — 20 лет!</a>
+								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
+						<div class="news_item banner" style="background: url(img/news_banner.png) no-repeat;">
+							<div class="news_item_disc">
+								<div class="news_item_date">5 января</div>
+								<a class="news_item_head">Юбилей — 20 лет!</a>
+								<div class="news_item_txt">Обучающая программа <br>в области композитной<br> черепицы, с целью<br> поддержания высокого уровня<br> знаний продающего штата<br> сотрудников.</div>
+							</div>
+						</div>
+						<div class="news_item">
+							<div class="news_item_img">
+								<img src="img/news1.png" alt="slider_index4">
+							</div>
+							<div class="news_item_disc">
+								<div class="news_item_date">5 января</div>
+								<a class="news_item_head">Юбилей — 20 лет!</a>
+								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
+						<div class="news_item">
+							<div class="news_item_img">
+								<img src="img/news1.png" alt="slider_index4">
+							</div>
+							<div class="news_item_disc">
+								<div class="news_item_date">5 января</div>
+								<a class="news_item_head">Юбилей — 20 лет!</a>
+								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							</div>
+						</div>
+					</div>
+							
+						</div>
+					</div>
+					</div>
+	</section>
+	<section class="gutter_bottom">
+					<div class="container">
+					<div class="row">
+					<div class="col-12">
+					<h2 class="gradient text">Популярные товары</h2>
+					<div class="counter"></div>
+					<div id="slider_index5" class="owl-carousel">
+						<div class="shop_item">
+							<div class="shop_item_img">
+								<img src="img/shop/shop_item.png" alt="shop_item">
+							</div>
+							<div class="shop_item_disc">
+								<div class="shop_item_icons">
+									<a href="#"><i class="far fa-heart"></i></a>
+									<a href="#"><i class="fas fa-balance-scale"></i></a>
+								</div>
+								<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+								<div class="shop_item_price">
+									586 &#8381;
+								</div>
+								<form action="">
+									<div class="shop_item_quantity clearfix">
+										<div class="shop_item_quantity-minus">-</div>
+										<input class="shop_item_quantity-input" type="text" value="1111">
+										<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<button class="but buy" type="submit">Купить</button>
+								</form>
+							</div>
+						</div>
+						<div class="shop_item">
+							<div class="shop_item_img">
+								<img src="img/shop/shop_item.png" alt="shop_item">
+							</div>
+							<div class="shop_item_disc">
+								<div class="shop_item_icons">
+									<a href="#"><i class="far fa-heart"></i></a>
+									<a href="#"><i class="fas fa-balance-scale"></i></a>
+								</div>
+								<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+								<div class="shop_item_price">
+									586 &#8381;
+								</div>
+								<form action="">
+									<div class="shop_item_quantity clearfix">
+										<div class="shop_item_quantity-minus">-</div>
+										<input class="shop_item_quantity-input" type="text" value="1111">
+										<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<button class="but buy" type="submit">Купить</button>
+								</form>
+							</div>
+						</div>
+						<div class="shop_item">
+							<div class="shop_item_img">
+								<img src="img/shop/shop_item.png" alt="shop_item">
+							</div>
+							<div class="shop_item_disc">
+								<div class="shop_item_icons">
+									<a href="#"><i class="far fa-heart"></i></a>
+									<a href="#"><i class="fas fa-balance-scale"></i></a>
+								</div>
+								<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+								<div class="shop_item_price">
+									586 &#8381;
+								</div>
+								<form action="">
+									<div class="shop_item_quantity clearfix">
+										<div class="shop_item_quantity-minus">-</div>
+										<input class="shop_item_quantity-input" type="text" value="1111">
+										<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<button class="but buy" type="submit">Купить</button>
+								</form>
+							</div>
+						</div>
+						<div class="shop_item">
+							<div class="shop_item_img">
+								<img src="img/shop/shop_item.png" alt="shop_item">
+							</div>
+							<div class="shop_item_disc">
+								<div class="shop_item_icons">
+									<a href="#"><i class="far fa-heart"></i></a>
+									<a href="#"><i class="fas fa-balance-scale"></i></a>
+								</div>
+								<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+								<div class="shop_item_price">
+									586 &#8381;
+								</div>
+								<form action="">
+									<div class="shop_item_quantity clearfix">
+										<div class="shop_item_quantity-minus">-</div>
+										<input class="shop_item_quantity-input" type="text" value="1111">
+										<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<button class="but buy" type="submit">Купить</button>
+								</form>
+							</div>
+						</div>
+						<div class="shop_item">
+							<div class="shop_item_img">
+								<img src="img/shop/shop_item.png" alt="shop_item">
+							</div>
+							<div class="shop_item_disc">
+								<div class="shop_item_icons">
+									<a href="#"><i class="far fa-heart"></i></a>
+									<a href="#"><i class="fas fa-balance-scale"></i></a>
+								</div>
+								<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+								<div class="shop_item_price">
+									586 &#8381;
+								</div>
+								<form action="">
+									<div class="shop_item_quantity clearfix">
+										<div class="shop_item_quantity-minus">-</div>
+										<input class="shop_item_quantity-input" type="text" value="1111">
+										<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<button class="but buy" type="submit">Купить</button>
+								</form>
+							</div>
+						</div>
+						<div class="shop_item">
+							<div class="shop_item_img">
+								<img src="img/shop/shop_item.png" alt="shop_item">
+							</div>
+							<div class="shop_item_disc">
+								<div class="shop_item_icons">
+									<a href="#"><i class="far fa-heart"></i></a>
+									<a href="#"><i class="fas fa-balance-scale"></i></a>
+								</div>
+								<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+								<div class="shop_item_price">
+									586 &#8381;
+								</div>
+								<form action="">
+									<div class="shop_item_quantity clearfix">
+										<div class="shop_item_quantity-minus">-</div>
+										<input class="shop_item_quantity-input" type="text" value="1111">
+										<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<button class="but buy" type="submit">Купить</button>
+								</form>
+							</div>
+						</div>
+					</div>
+							
+						</div>
+					</div>
+					</div>		
+	</section>
 	<script src="js/scripts.min.js"></script>
 
 </body>
