--- a/app/index.html
+++ b/app/index.html
@@ -524,6 +524,64 @@
 					</div>
 					</div>		
 	</section>
+	<section class="seo_text">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-md-7">
+					<div class="gradient text">«Пятый фасад» вашего дома</div>
+					<div class="seo_text_block">
+					<p>Кровля — один из важнейших компонентов при проектировании жилого ансамбля — это, так называемый, «пятый фасад» Вашего дома. От того насколько он логично впишется в общую картину, зависит общая гармоничность постройки. Но не разумно определяться с выбором кровли только лишь по внешним достоинствам и стоимости. Тем более в российских условиях к качеству необходимо подходить с высокими запросами. </p>
+					<p>Опираясь на наш многолетний опыт работы, в большей степени данным требованиям соответствует композитная кровля, цена которой является достаточно низкой по сравнению с остальными покрытиями. Лидером на российском рынке является бельгийская черепица Metrotile. </p>
+					<p>Бельгийский концерн «Metrotile Europe NV» создал уникальный материал, который внешне имитирует натуральную черепицу, но в тоже время имеет такой же срок службы, высочайшее качество и доступную стоимость композитной кровли.   Композитная металлочерепица также отвечает всем стандартам качества и является одним из самых распространенных типов покрытия. </p>
+					<p>Композитная кровля Metrotile идеально подходит для обустройства крыш загородных коттеджей, роскошных вилл и дачных домов, а элегантная фактура металлочерепицы Metrotile нередко используется при реставрации исторических зданий. Узнать цены на композитную металлочерепицу вы можете онлайн на нашем сайте или же по телефону +7 495 363 44 32.</p>
+					</div>
+				</div>
+				<div class="offset-md-1 col-md-4 seo_text_pic_wrap" style="background: url(img/seo_text_pic.png) no-repeat;">
+					<div class="seo_text_pic"></div>
+				</div>
+			</div>
+			<div class="row">
+					<div class="col-md-8 seo_text_pic_wrap"  style="background: url(img/seo_text_frame.png) no-repeat;">	
+							<div class="seo_text_frame"></div>
+					</div>
+					<div class="col-md-4 d-flex align-items-center justify-content-center">
+						<div class="seo_text_block gradient_seo_block">
+						</div>
+							<div class="seo_text_block gradient_seo">
+								<p>Кровля Metrotile — это многослойный материал, состоящий в своем основании из качественного листа стали с защитным покрытием из алюцинка, крошки из гранул натурального камня и акриловой глазури. </p>
+							</div>	
+					</div>
+			</div>
+			<div class="row align-items-center">
+				<div class="col-md-7">
+					<div class="gradient text">Особенности композитной кровли Metrotile</div>
+					<div class="seo_text_block">
+					<p>Одной из важнейших особенностей Metrotile является особая секретная формула акрилового клея, запатентованная бельгийским концерном «Metrotile Europe NV», с помощью которого базальтовая крошка остается без повреждений в течение многолетнего срока службы композитной черепицы. Данная формула позволяет сделать кровлю наивысшего качества, со сроком службы более полувека.  </p>
+					<p>Еще одной особенностью композитного материала является простота монтажа.  Благодаря незначительному весу (6 кг/ м²) , кровле Metrotile не требуется усиленная стропильная конструкция. Площадь листа составляет 0,5 м², что способствует с одной стороны быстрому монтажу, а с другой стороны наименьшему количеству обрезков. 
+Компания Metrotile располагает подробным курсом видео инструкций, в которых наглядно продемонстрированы способы монтажа всех самых популярных узлов и соединений. </p>
+					<p>Вы можете выбрать любое цветовое решение и купить композитную металлочерепицу, оставив заявку на нашем сайте. </p>
+					</div>
+					<div class="row">
+						<div class="col-12 d-flex justify-content-start"><div class="but buy buy2">Перейти в каталог</div></div>
+					</div>					
+				</div>
+				<div class="offset-md-1 col-md-4 seo_text_pic_wrap" style="background: url(img/seo_text_pic2.png) no-repeat;">
+					<div class="seo_text_pic"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="gradient_bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2"></div>
+				<div class="offset-md-1 col-md-1"></div>
+				<div class="offset-md-1 col-md-1"></div>
+				<div class="offset-md-1 col-md-2"></div>
+				<div class="offset-md-1 col-md-1"></div>
+			</div>
+		</div>
+	</footer>
 	<script src="js/scripts.min.js"></script>
 
 </body>
