--- a/app/catalog_spisok_tovarov.html
+++ b/app/catalog_spisok_tovarov.html
@@ -79,7 +79,30 @@
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-2"></div>
+				<div class="col-md-2">
+					<form action="" class="filter">
+						<div class="filter_block">
+							<div class="filter_block-head">Коллекции</div>
+							<div class="filter_block-wrap">
+								<a class="filter_block-wrap-link">MetroBond</a>
+								<a class="filter_block-wrap-link">MetroRoman</a>
+								<a class="filter_block-wrap-link">Metrotile Mistral</a>
+								<a class="filter_block-wrap-link">MetroShake II</a>
+								<a class="filter_block-wrap-link">MetroClassic</a>
+								<a class="filter_block-wrap-link">Metrotile Gallo</a>
+								<a class="filter_block-wrap-link">Metrotile Romana</a>
+								<a class="filter_block-wrap-link">MetroViksen</a>
+								<a class="filter_block-wrap-link">MetroCooper</a>
+								<a class="filter_block-wrap-link">Aquapan</a>
+								<a class="filter_block-wrap-link-new gradient">Новинки</a>
+								<a class="filter_block-wrap-link">Metrotile IPanel</a>
+								<a class="filter_block-wrap-link">Metrotile ISlate</a>
+								<a class="filter_block-wrap-link">Metrotile IShake</a>
+								<a class="filter_block-wrap-link">Metrotile IShingle</a>
+							</div>
+						</div>
+					</form>
+				</div>
 				<div class="col-md-10"></div>
 			</div>
 		</div>
