--- a/app/index.html
+++ b/app/index.html
@@ -294,8 +294,9 @@
 			</div>
 			<div class="row gutter_top">
 				<div class="col-12">
-					<div class="professionals_banner d-flex justify-content-center align-items-center">
-						<div>Профессиональный монтаж композитной кровли<a href="#" class="but">Наши предложения</a></div>
+					<div class="professionals_banner">
+						<div class="row justify-content-center">Профессиональный монтаж композитной кровли</div>
+						<div class="row justify-content-center"><a href="#" class="but">Наши предложения</a></div>
 					</div>
 				</div>
 			</div>
