--- a/app/catalog_spisok_tovarov.html
+++ b/app/catalog_spisok_tovarov.html
@@ -70,7 +70,7 @@
 </ul> 
 		</div>
 		<div class="row justify-content-center">
-			<h1 class="gradient text">КАталог Меtrotile</h1>
+			<h1 class="gradient text">Композитная черепица</h1>
 		</div>
 	</div>
 	<section>
@@ -142,9 +142,295 @@
 							</div>
 						</div>
 					</form>
-				</div>
+					<div class="row">	
+						<div class="col-4 d-flex">	
+						<div class="filter_sort">
+							<span>Сортировать по</span>
+							<a class="active"  href="#">цене</a>
+							<a href="#">названию</a>
+						</div>
+						</div>
+						<div class="col-8 d-flex justify-content-end">
+						<div class="filter_number">
+							<span>Выводить по</span>
+							<a class="active" href="#">10</a>
+							<a href="#">25</a>
+							<a href="#">50</a>
+						</div>
+					</div>
+					</div>
+					<div class="catalog_items">
+						<div class="row">
+							<div class="col-md-4">
+								<div class="shop_item">
+								<div class="shop_item_img">
+									<img src="img/shop/shop_item.png" alt="shop_item">
+									<div class="shop_item_popup">
+										<div class="options">
+											<div class="options_row clearfix">
+												<span class="options_cell head">Длина:</span>
+												<span class="options_cell head">Ширина:</span>
+												<span class="options_cell head">Высота волны:</span>
+												<span class="options_cell">1330 мм</span>
+												<span class="options_cell">410 мм</span>
+												<span class="options_cell">37 мм</span>
+											</div>
+											<div class="options_row clearfix">
+												<span class="options_cell head">Площадь:</span>
+												<span class="options_cell head">Вес шт:</span>
+												<span class="options_cell head">Вес м2:</span>
+												<span class="options_cell">0.55 м²</span>
+												<span class="options_cell">2.95 кг</span>
+												<span class="options_cell">6.3 кг</span>
+											</div>
+											<div class="options_row clearfix">
+												<span class="options_cell head">Расход:</span>
+												<span class="options_cell"></span>
+												<span class="options_cell">Стальная основа</span>
+												<span class="options_cell">2.17 шт/м²</span>
+												<span class="options_cell"></span>
+												<span class="options_cell"></span>
+											</div>
+										</div>
+										<button type="submit" class="but">Быстрый просмотр</button>
+									</div>
+								</div>
+								<div class="shop_item_disc">
+									<div class="shop_item_icons">
+										<a href="#"><i class="far fa-heart"></i></a>
+										<a href="#"><i class="fas fa-balance-scale"></i></a>
+										<span class="hit gradient_green">Хит продаж</span>
+									</div>
+									<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+									<div class="shop_item_price">
+										586 &#8381;
+									</div>
+									<form action="">
+										<div class="shop_item_quantity clearfix">
+											<div class="shop_item_quantity-minus">-</div>
+											<input class="shop_item_quantity-input" type="text" value="1111">
+											<div class="shop_item_quantity-plus">+</div>
+										</div>
+										<button class="but buy" type="submit">Купить</button>
+									</form>
+								</div>
+							</div>
+							</div>
+							<div class="col-md-4">
+								<div class="shop_item">
+								<div class="shop_item_img">
+									<img src="img/shop/shop_item.png" alt="shop_item">
+									<div class="shop_item_popup">
+										<div class="options">
+											<div class="options_row clearfix">
+												<span class="options_cell head">Длина:</span>
+												<span class="options_cell head">Ширина:</span>
+												<span class="options_cell head">Высота волны:</span>
+												<span class="options_cell">1330 мм</span>
+												<span class="options_cell">410 мм</span>
+												<span class="options_cell">37 мм</span>
+											</div>
+											<div class="options_row clearfix">
+												<span class="options_cell head">Площадь:</span>
+												<span class="options_cell head">Вес шт:</span>
+												<span class="options_cell head">Вес м2:</span>
+												<span class="options_cell">0.55 м²</span>
+												<span class="options_cell">2.95 кг</span>
+												<span class="options_cell">6.3 кг</span>
+											</div>
+											<div class="options_row clearfix">
+												<span class="options_cell head">Расход:</span>
+												<span class="options_cell"></span>
+												<span class="options_cell">Стальная основа</span>
+												<span class="options_cell">2.17 шт/м²</span>
+												<span class="options_cell"></span>
+												<span class="options_cell"></span>
+											</div>
+										</div>
+										<button type="submit" class="but">Быстрый просмотр</button>
+									</div>
+								</div>
+								<div class="shop_item_disc">
+									<div class="shop_item_icons">
+										<a href="#"><i class="far fa-heart"></i></a>
+										<a href="#"><i class="fas fa-balance-scale"></i></a>
+										<span class="hit gradient">новинка</span>
+									</div>
+									<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+									<div class="shop_item_price">
+										586 &#8381;
+									</div>
+									<form action="">
+										<div class="shop_item_quantity clearfix">
+											<div class="shop_item_quantity-minus">-</div>
+											<input class="shop_item_quantity-input" type="text" value="1111">
+											<div class="shop_item_quantity-plus">+</div>
+										</div>
+										<button class="but buy" type="submit">Купить</button>
+									</form>
+								</div>
+							</div>
+							</div>
+							<div class="col-md-4">
+								<div class="shop_item">
+								<div class="shop_item_img">
+									<img src="img/shop/shop_item.png" alt="shop_item">
+									<div class="shop_item_popup">
+										<div class="options">
+											<div class="options_row clearfix">
+												<span class="options_cell head">Длина:</span>
+												<span class="options_cell head">Ширина:</span>
+												<span class="options_cell head">Высота волны:</span>
+												<span class="options_cell">1330 мм</span>
+												<span class="options_cell">410 мм</span>
+												<span class="options_cell">37 мм</span>
+											</div>
+											<div class="options_row clearfix">
+												<span class="options_cell head">Площадь:</span>
+												<span class="options_cell head">Вес шт:</span>
+												<span class="options_cell head">Вес м2:</span>
+												<span class="options_cell">0.55 м²</span>
+												<span class="options_cell">2.95 кг</span>
+												<span class="options_cell">6.3 кг</span>
+											</div>
+											<div class="options_row clearfix">
+												<span class="options_cell head">Расход:</span>
+												<span class="options_cell"></span>
+												<span class="options_cell">Стальная основа</span>
+												<span class="options_cell">2.17 шт/м²</span>
+												<span class="options_cell"></span>
+												<span class="options_cell"></span>
+											</div>
+										</div>
+										<button type="submit" class="but">Быстрый просмотр</button>
+									</div>
+								</div>
+								<div class="shop_item_disc">
+									<div class="shop_item_icons">
+										<a href="#"><i class="far fa-heart"></i></a>
+										<a href="#"><i class="fas fa-balance-scale"></i></a>
+									</div>
+									<a href="#" class="shop_item_link">Композитная черепица MetroBond зеленый</a>
+									<div class="shop_item_price">
+										586 &#8381;
+									</div>
+									<form action="">
+										<div class="shop_item_quantity clearfix">
+											<div class="shop_item_quantity-minus">-</div>
+											<input class="shop_item_quantity-input" type="text" value="1111">
+											<div class="shop_item_quantity-plus">+</div>
+										</div>
+										<button class="but buy" type="submit">Купить</button>
+									</form>
+								</div>
+							</div>
+							</div>
+						</div>
+					</div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-2"></div>
+			<div class="col-md-10">
+		<div class="navigation">
+			<a href="#" class="navigation_prev"></a>
+			<a class="cur" href="#">1</a>
+			<a href="#">2</a>
+			<a href="#">3</a>
+			<a href="#">4</a>
+			<a href="#">5</a>
+			<a href="#" class="navigation_next"></a>
+		</div>
+		</div>
+		</div>
+		<div class="row links">
+			<div class="col-12">
+				<div class="d-flex">
+					<div class="links_block no_icon" style="background-image: url(img/links_block.png);">
+						<a href="#"></a>
+						<span>где купить</span>
+					</div>
+					<div class="links_block icon icon1">
+						<a href="#"></a>
+						<span>расчет<br>кровли</span>
+					</div>
+					<div class="links_block no_icon" style="background-image: url(img/links_block2.png);">
+						<a href="#"></a>
+						МОнтаж
+					</div>
+					<div class="links_block icon icon2">
+						<a href="#"></a>
+						<span>видео</span>
+					</div>
+					<div class="links_block no_icon" style="background-image: url(img/links_block3.png);">
+						<a href="#"></a>
+						Инструкции<br> по монтажу
+					</div>
+				</div>
+				<div class="d-flex">
+					<div class="links_block icon icon3">
+						<a href="#"></a>
+						<span>Акции</span>
+					</div>
+					<div class="links_block no_icon" style="background-image: url(img/links_block4.png);">
+						<a href="#"></a>
+						Преимущества
+					</div>
+					<div class="links_block icon icon4">
+						<a href="#"></a>
+						<span>Фото-<br>галерея</span>
+					</div>
+					<div class="links_block no_icon" style="background-image: url(img/links_block5.png);">
+						<a href="#"></a>
+						Это интересно
+					</div>
+					<div class="links_block icon icon5">
+						<a href="#"></a>
+						<span>Новости</span>
+					</div>
+				</div>
+				<div class="d-flex">
+					<div class="links_block no_icon" style="background-image: url(img/links_block6.png);">
+						<a href="#"></a>
+						мы в соцсетях
+					</div>
+					<div class="links_block icon icon6">
+						<a href="#"></a>
+						<span>Производство</span>
+					</div>
+					<div class="links_block no_icon" style="background-image: url(img/links_block7.png);">
+						<a href="#"></a>
+						Архитекторам
+					</div>
+					<div class="links_block icon icon7">
+						<a href="#"></a>
+						<span>Технология</span>
+					</div>
+					<div class="links_block no_icon" style="background-image: url(img/links_block8.png);">
+						<a href="#"></a>
+						История
+					</div>
+				</div>
+				
+			</div>
+		</div>
+			<div class="row seo_text margin_top100">
+				<div class="col-md-4" style="background: url(img/shop_seo.png) no-repeat center;">
+					<div class="seo_text_pic seo_text_pic_wrap"></div>
+				</div>
+				<div class="col-md-7 offset-md-1">
+					<div class="gradient text">Особенности композитной кровли Metrotile</div>
+					<div class="seo_text_block">
+					<p>Одной из важнейших особенностей Metrotile является особая секретная формула акрилового клея, запатентованная бельгийским концерном «Metrotile Europe NV», с помощью которого базальтовая крошка остается без повреждений в течение многолетнего срока службы композитной черепицы. Данная формула позволяет сделать кровлю наивысшего качества, со сроком службы более полувека.  </p>
+					<p>Еще одной особенностью композитного материала является простота монтажа.  Благодаря незначительному весу (6 кг/ м²) , кровле Metrotile не требуется усиленная стропильная конструкция. Площадь листа составляет 0,5 м², что способствует с одной стороны быстрому монтажу, а с другой стороны наименьшему количеству обрезков. 
+Компания Metrotile располагает подробным курсом видео инструкций, в которых наглядно продемонстрированы способы монтажа всех самых популярных узлов и соединений.  </p>
+					<p>Одной из важнейших особенностей Metrotile является особая секретная формула акрилового клея, запатентованная бельгийским концерном «Metrotile Europe NV», с помощью которого базальтовая крошка остается без повреждений в течение многолетнего срока службы композитной черепицы. Данная формула позволяет сделать кровлю наивысшего качества, со сроком службы более полувека.  </p>
+					<p>Еще одной особенностью композитного материала является простота монтажа.  Благодаря незначительному весу (6 кг/ м²) , кровле Metrotile не требуется усиленная стропильная конструкция. Площадь листа составляет 0,5 м², что способствует с одной стороны быстрому монтажу, а с другой стороны наименьшему количеству обрезков. 
+Компания Metrotile располагает подробным курсом видео инструкций, в которых наглядно продемонстрированы способы монтажа всех самых популярных узлов и соединений. </p>
+<p>Вы можете выбрать любое цветовое решение и купить композитную металлочерепицу, оставив заявку на нашем сайте. </p>
+					</div>			
+				</div>
+			</div>
 	</section>
 	<footer class="gradient_bg">
 		<div class="container">
