--- a/app/cart.html
+++ b/app/cart.html
@@ -75,90 +75,77 @@
 			<h1 class="gradient text">КОрзина</h1>
 		</div>
 	</div>
-	<div class="container-flued">
-		<div class="row">
-			<div class="col-12">
-			<div class="banner" style="background-image: url(/img/banner.png);">
-				<div class="container pos_r">
-					<div class="row">
-					<div class="banner_txt">Расчет композитной черепицы – один из важнейших этапов при покупке композитной кровли. Правильно рассчитанный материал позволит сэкономить Ваши средства и время. Вам не придется ждать новой поставки композитной черепицы, если Вам не хватит каких-либо элементов кровли, в тоже время точный расчет позволит избежать излишков материала,<br> при этом Вы сократите расходы на кровлю. </div>
-					<div class="banner_appoint">
-						<span>Заказать расчет кровли<br>
-						у профессиональных специалистов. </span>
-						<a data-fancybox data-type="ajax" data-src="call.html" class="but gradient">Оставить заявку</a>
-					</div>
-					</div>
-				</div>
-				<a href="#" class="banner_video">
-					Посмотреть видеокурс
-				</a>
-			</div>
-				
-			</div>
-		</div>
-	</div>
+	<form action="">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="gradient text no_border">Расчитать кровлю</h2>
-				<div>Зная основные размеры скатов кровли, с помощью кровельного калькулятора Вы сможете узнать ориентировочную стоимость материала, который понадобится Вам для покрытия крыши. Обращаем Ваше внимание на то, что данный расчет композитной черепицы является не окончательным, а примерным!</div>
+						<div class="cart_item d-flex">
+							<div class="cart_item_left d-flex align-items-center">
+								<div class="cart_item_img">
+									<img src="img/shop/shop_item.png" alt="cart_item_img">
+								</div>
+								<a href="#" class="blue_link">Композитная черепица MetroGallo красный</a>
+							</div>
+							<div class="cart_item_right d-flex align-items-center">
+								<div class="cart_item_price">
+									<div class="cart_item_price-old">1 000 руб.</div>
+									<div class="cart_item_price-cur">890 ₽</div>
+								</div>
+								<div class="cart_item_quantity  d-flex align-items-center">
+									<div class="shop_item_quantity clearfix">
+												<div class="shop_item_quantity-minus">-</div>
+												<input class="shop_item_quantity-input" value="1111" type="text"/>
+												<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<span>шт</span>
+								</div>
+									<div class="cart_item_price-cur">89 000 ₽</div>
+									<a href="#" class="cart_item_del"></a>
+							</div>
+					</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12">
-				<div class="calc_tabs gradient_bg">
-					<div class="calc_tabs_el"><span>1</span>Тип профиля</div>
-					<div class="calc_tabs_el"><span>2</span>Цвет кровли</div>
-					<div class="calc_tabs_el"><span>3</span>Основные размеры кровли</div>
-				</div>
+						<div class="cart_item d-flex">
+							<div class="cart_item_left d-flex align-items-center">
+								<div class="cart_item_img">
+									<img src="img/shop/shop_item.png" alt="cart_item_img">
+								</div>
+								<a href="#" class="blue_link">Композитная черепица MetroGallo красный</a>
+							</div>
+							<div class="cart_item_right d-flex align-items-center">
+								<div class="cart_item_price">
+									<div class="cart_item_price-old">1 000 руб.</div>
+									<div class="cart_item_price-cur">890 ₽</div>
+								</div>
+								<div class="cart_item_quantity  d-flex align-items-center">
+									<div class="shop_item_quantity clearfix">
+												<div class="shop_item_quantity-minus">-</div>
+												<input class="shop_item_quantity-input" value="1111" type="text"/>
+												<div class="shop_item_quantity-plus">+</div>
+									</div>
+									<span>шт</span>
+								</div>
+									<div class="cart_item_price-cur">89 000 ₽</div>
+									<a href="#" class="cart_item_del"></a>
+							</div>
+					</div>
 			</div>
 		</div>
-		<div class="row calc_price">
-			<div class="col-md-6">
-					<span>Ориентировочная стоимость:<span class="tooltip"></span></span><span class="gradient text no_border">537 600 <span class="ruble">₽</span></span>
-			</div>
-			<div class="col-md-6 d-flex justify-content-end align-items-center">
-				<a href="#" class="blue_link">Отправить расчёт на e-mail</a>
-				<button class="but buy">рассчитать</button>
-			</div>
+	<div class="row">
+		<div class="col-md-4">
+			<div class="fz12 padding_left_gut">Нажимая кнопку «Оформить заказ», я даю свое<br> согласие на обработку персональных данных.</div>
 		</div>
-		<div class="row">
-			<div class="col-12">
-			<form action="" class="calc_form gradient_bg">
-				<div><div class="gradient new_item">Бесплатная услуга</div></div>
-				<div class="gradient text no_border">Что бы получить точный расчет, закажите у профессиональных специалистов.</div>
-				<div class="row">
-					<div class="col-md-4">
-					<input class="calc_form_input" placeholder="Имя*" type="text"/>
-					</div>
-					<div class="col-md-4">
-					<input class="calc_form_input" placeholder="E-mail*" type="text"/>
-					</div>
-					<div class="col-md-4">
-					<input class="calc_form_input" placeholder="Телефон*" type="text"/>
-					</div>
-				</div>
-					<div class="row">
-						<div class="col-md-10">
-						<input class="calc_form_input" placeholder="Комментарий" type="text"/>
-						</div>
-						<div class="col-md-2">
-						<button class="but buy">Отправить заявку</button>
-						</div>
-					</div>
-			</form>
-			</div>
+		<div class="offset-md-5 col-md-3 d-flex justify-content-end">
+			<span>Итого к оплате: <span class="cart_item_total">89 576 ₽</span></span>
 		</div>
-
-		<div class="row gutter_top margin_bot100">
-				<div class="col-12">
-					<div class="professionals_banner">
-						<div class="row justify-content-center">Где купить</div>
-							<div class="row justify-content-center"><a href="#" class="but">Сертифицированные строительные компании</a></div>
-
-					</div>
-				</div>
-		</div>		
+	</div>
+	<div class="row">
+		<div class="col-12 d-flex justify-content-end">
+		<button class="but buy margin_top_gut margin_bot100">оформить заказ</button></div>
+	</div>
+	</form>
 	</div>
 	</section>
 
