--- a/app/mount.html
+++ b/app/mount.html
@@ -80,8 +80,11 @@
 			<div class="banner" style="background-image: url(/img/banner2.png);">
 				<div class="container pos_r">
 					<div class="row">
-					<div class="banner_head gradient">Профессиональные<br>специалисты</div>
-					<div class="banner_txt mount_txt">Бельгийская компания Metrotile известна во всем мире и имеет официальные представительства во многих странах. Россия относиться к перспективным рынкам сбыта, поэтому в большинстве российских городов есть официальные дилеры, которые производят продажу и профессиональный монтаж композитной черепицы.</div>
+					<div class="banner_block">
+						<div class="banner_head gradient">Профессиональные<br>специалисты</div>
+							<div class="banner_txt mount_txt">Бельгийская компания Metrotile известна во всем мире и имеет официальные представительства во многих странах. Россия относиться к перспективным рынкам сбыта, поэтому в большинстве российских городов есть официальные дилеры, которые производят продажу и профессиональный монтаж композитной черепицы.
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
