--- a/app/offers.html
+++ b/app/offers.html
@@ -76,7 +76,71 @@
 	</div>
 		<div class="container">
 
-	</div>
+			<div class="row">
+				<div class="col-12">
+				<div class="banner banner3" style="background-image: url(/img/banner3.png);">
+					<div class="container pos_r">
+						<div class="row">
+						<div class="banner_block">
+							<div class="banner_head gradient">Летние скидки!</div>
+								<div class="banner_txt mount_txt">Самые выгодные предложения по приобретению кровли по акционным ценам
+								</div>
+							</div>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+						<div class="news_item banner margin_top_gut" style="background: url(img/offer_item.png) no-repeat;">
+							<div class="news_item_disc">
+								<a class="news_item_head">Распродажа склада!</a>
+							</div>
+						</div>
+				</div>
+				<div class="col-md-4">
+						<div class="news_item banner gradient_bg margin_top_gut">
+							<div class="news_item_disc">
+								<a class="news_item_head">Выгодное предложение</a>
+								<div class="news_item_txt">Самые выгодные предложения по приобретению кровли <br>по акционным ценам</div>
+							</div>
+						</div>
+				</div>
+				<div class="col-md-4">
+						<div class="news_item banner margin_top_gut" style="background: url(img/offer_item2.png) no-repeat;">
+							<div class="news_item_disc">
+								<a class="news_item_head">ПРЕИМУЩЕСТВА КОМПОЗИТНОЙ ЧЕРЕПИЦЫ METROTILE ПЕРЕД ГИБКОЙ ЧЕРЕПИЦЕЙ</a>
+							</div>
+						</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+						<div class="news_item banner margin_top_gut" style="background: url(img/offer_item.png) no-repeat;">
+							<div class="news_item_disc">
+								<a class="news_item_head">Распродажа склада!</a>
+							</div>
+						</div>
+				</div>
+				<div class="col-md-4">
+						<div class="news_item banner gradient_bg margin_top_gut">
+							<div class="news_item_disc">
+								<a class="news_item_head">Выгодное предложение</a>
+								<div class="news_item_txt">Самые выгодные предложения по приобретению кровли <br>по акционным ценам</div>
+							</div>
+						</div>
+				</div>
+				<div class="col-md-4">
+						<div class="news_item banner margin_top_gut" style="background: url(img/offer_item2.png) no-repeat;">
+							<div class="news_item_disc">
+								<a class="news_item_head">ПРЕИМУЩЕСТВА КОМПОЗИТНОЙ ЧЕРЕПИЦЫ METROTILE ПЕРЕД ГИБКОЙ ЧЕРЕПИЦЕЙ</a>
+							</div>
+						</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<footer class="gradient_bg">
