--- a/app/mount.html
+++ b/app/mount.html
@@ -77,7 +77,7 @@
 	<div class="container-flued">
 		<div class="row">
 			<div class="col-12">
-			<div class="banner" style="background-image: url(/img/banner2.png);">
+			<div class="banner" style="background-image: url(img/banner2.png);">
 				<div class="container pos_r">
 					<div class="row">
 					<div class="banner_block">
