--- a/app/offers.html
+++ b/app/offers.html
@@ -78,7 +78,7 @@
 
 			<div class="row">
 				<div class="col-12">
-				<div class="banner banner3" style="background-image: url(/img/banner3.png);">
+				<div class="banner banner3" style="background-image: url(img/banner3.png);">
 					<div class="container pos_r">
 						<div class="row">
 						<div class="banner_block">
