--- a/app/index.html
+++ b/app/index.html
@@ -70,41 +70,41 @@
 			</div>
 			<div class="b-intro__item" style="background: url(img/slider_index_top.png);"></div>
 		</div>
-		<div class="container b-intro__dots">
+		<div class="b-intro__dots container">
 			<div class="row">
 				<div class="col-12"><div id="customDots" class="b-intro__dot owl-dots"></div></div>
 			</div>
 		</div>
 	</section>
-	<section class="features gutter_bottom">
+	<section class="b-stats b-features gutter_bottom">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
 					<h2 class="gradient text">Композитная<br> кровля из Бельгии</h2>
-					<div class="fz18">Компания Metroline является официальным дилером бельгийского концерна "Metroline Europe NV" в России. Высокое качество композитной кровли, цена от прямого производителя Metroline - два аргумента, чтобы сделать правильный выбор.</div>
-					<div class="features_numbers d-flex">
-						<div class="features_numbers_el d-flex align-items-center">
-							<span class="gradient text">10</span><span>Коллекций<br> кровли</span></span>
+					<div class="b-stats__text">Компания Metroline является официальным дилером бельгийского концерна "Metroline Europe NV" в России. Высокое качество композитной кровли, цена от прямого производителя Metroline - два аргумента, чтобы сделать правильный выбор.</div>
+					<div class="b-stats__numbers d-flex">
+						<div class="b-stats__numbers-item d-flex align-items-center">
+							<span class="b-stats__numbers-text gradient text">10</span><span>Коллекций<br> кровли</span></span>
 						</div>
-						<div class="features_numbers_el d-flex align-items-center">
-							<span class="gradient text">24</span><span>Цветовых<br>  решения</span></</span>
+						<div class="b-stats__numbers-item d-flex align-items-center">
+							<span class="b-stats__numbers-text gradient text">24</span><span>Цветовых<br>  решения</span></</span>
 						</div>
-						<div class="features_numbers_el d-flex align-items-center">
-							<span class="gradient text">250</span><span>Партнеров<br>  в России</span></</span>
+						<div class="b-stats__numbers-item d-flex align-items-center">
+							<span class="b-stats__numbers-text gradient text">250</span><span>Партнеров<br>  в России</span></</span>
 						</div>
 					</div>
 				</div>
 				<div class="offset-md-2 col-md-4">
-					<div class="features_right">
-						<ul class="features_right_list">
-							<li class="features_right_list_first"><span class="head">Пожаробезопасность</span><span>Высокая стойкость<br> к открытому огню</span></li>
-							<li class="features_right_list_scnd"><span class="head">Бесшумность</span><span>Кровля Метротайл не шумит<br> при дожде и граде</span></li>
-							<li class="features_right_list_thrd"><span class="head">Красота</span><span>Гранулят натурального камня<br> придаёт красоту <br>
+					<div class="b-features__container">
+						<ul class="b-features__list">
+							<li class="b-features__list-item first"><span class="b-features__text-title">Пожаробезопасность</span><span  class="b-features__text">Высокая стойкость<br> к открытому огню</span></li>
+							<li class="b-features__list-item scnd"><span class="b-features__list-title">Бесшумность</span><span  class="b-features__text">Кровля Метротайл не шумит<br> при дожде и граде</span></li>
+							<li class="b-features__list-item thrd"><span class="b-features__list-title">Красота</span><span  class="b-features__text">Гранулят натурального камня<br> придаёт красоту <br>
 и респектабельность</span></li>
-							<li class="features_right_list_frth"><span class="head">Долговечность</span><span>Высокую защиту металла<br>
+							<li class="b-features__list-item frth"><span class="b-features__list-title">Долговечность</span><span  class="b-features__text">Высокую защиту металла<br>
 от коррозии и катодную защита<br>
 в месте обреза листа</span></li>
-							<li class="features_right_list_ffth"><span class="head">Цена</span><span>Европейское качество <br>
+							<li class="b-features__list-item ffth"><span class="b-features__list-title">Цена</span><span  class="b-features__text">Европейское качество <br>
 по доступной стоимости</span></li>
 						</ul>
 					</div>
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="index_slider gutter_bottom gradient_bg">
+	<section class="b-collections gutter_bottom gradient_bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
@@ -123,57 +123,35 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div  id="slider_index2" class="owl-carousel slider_index2">
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
+					<div  id="b-collections__slider" class="owl-carousel b-collections__slider">
+						<div class="catalog__item">
+							<div class="catalog__item-top">
+								<img src="img/slider_index2.png" alt="slider_index2" class="catalog__item-img">
 							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
+							<div class="catalog__item-desc">
+								<a class="catalog__item-link" href="#">MetroBond</a>
+								<span class="catalog__item-price">от 586</span>
 							</div>
-
 						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
+						<div class="catalog__item">
+							<div class="catalog__item-new gradient">новинка</div>
+							<div class="catalog__item-top">
+								<img src="img/slider_index2.png" alt="slider_index2" class="catalog__item-img">
 							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
+							<div class="catalog__item-desc">
+								<a class="catalog__item-link" href="#">MetroBond</a>
+								<span class="catalog__item-price">от 586</span>
 							</div>
-
 						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_new gradient">новинка</div>
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
+						<div class="catalog__item">
+							<div class="catalog__item-new gradient">новинка</div>
+							<div class="catalog__item-top">
+								<img src="img/slider_index2.png" alt="slider_index2" class="catalog__item-img">
 							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
+							<div class="catalog__item-desc">
+								<a class="catalog__item-link" href="#">MetroBond</a>
+								<span class="catalog__item-price">от 586</span>
 							</div>
-
-						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
-							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
-							</div>
-
-						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
-							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
-							</div>
-
 						</div>
 					</div>
 				</div>
@@ -189,64 +167,51 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div id="slider_index3" class="owl-carousel slider_index2">
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
+					<div id="b-collections__slider2" class="owl-carousel b-collections__slider">
+						<div class="catalog__item">
+							<div class="catalog__item-top">
+								<img src="img/slider_index2.png" alt="slider_index2" class="catalog__item-img">
 							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
+							<div class="catalog__item-desc">
+								<a class="catalog__item-link" href="#">MetroBond</a>
+								<span class="catalog__item-price">от 586</span>
 							</div>
-
 						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
+						<div class="catalog__item">
+							<div class="catalog__item-new gradient">новинка</div>
+							<div class="catalog__item-top">
+								<img src="img/slider_index2.png" alt="slider_index2" class="catalog__item-img">
 							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
+							<div class="catalog__item-desc">
+								<a class="catalog__item-link" href="#">MetroBond</a>
+								<span class="catalog__item-price">от 586</span>
 							</div>
-
 						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_new gradient">новинка</div>
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
+						<div class="catalog__item">
+							<div class="catalog__item-top">
+								<img src="img/slider_index2.png" alt="slider_index2" class="catalog__item-img">
 							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
+							<div class="catalog__item-desc">
+								<a class="catalog__item-link" href="#">MetroBond</a>
+								<span class="catalog__item-price">от 586</span>
 							</div>
-
 						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
+						<div class="catalog__item">
+							<div class="catalog__item-new gradient">новинка</div>
+							<div class="catalog__item-top">
+								<img src="img/slider_index2.png" alt="slider_index2" class="catalog__item-img">
 							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
+							<div class="catalog__item-desc">
+								<a class="catalog__item-link" href="#">MetroBond</a>
+								<span class="catalog__item-price">от 586</span>
 							</div>
-
-						</div>
-						<div class="catalog_item">
-							<div class="catalog_item_img">
-								<img src="img/slider_index2.png" alt="slider_index2">
-							</div>
-							<div class="catalog_item_disc">
-								<a href="#">MetroBond</a>
-								<span>от 586</span>
-							</div>
-
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="professionals gutter_top">
+	<section class="b-professionals gutter_top">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
@@ -258,7 +223,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<div class="professionals_disc">Приглашаем к сотрудничеству,<br> 
+					<div class="professionals__desc">Приглашаем к сотрудничеству,<br> 
 уверены оно может быть успешным <br> 
 и взаимовыгодным!</div>
 				</div>
@@ -273,24 +238,24 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-				<div class="professionals_disc_links">
-					<a href="#">Сотрудничество</a>
-					<a href="#">Модели  и текстуры</a>
+				<div class="professionals__desc-container">
+					<a class="professionals__desc-link" href="#">Сотрудничество</a>
+					<a class="professionals__desc-link" href="#">Модели  и текстуры</a>
 				</div></div>
 				<div class="col-md-4">
-				<div class="professionals_disc_links">
-					<a href="#">монтаж</a>
-					<a href="#">Расчёт</a>
+				<div class="professionals__desc-container">
+					<a class="professionals__desc-link" href="#">монтаж</a>
+					<a class="professionals__desc-link" href="#">Расчёт</a>
 				</div></div>
 				<div class="col-md-4">
-				<div class="professionals_disc_links">
-					<a href="#">Сотрудничество</a>
-					<a href="#">Условия</a>
+				<div class="professionals__desc-container">
+					<a class="professionals__desc-link" href="#">Сотрудничество</a>
+					<a class="professionals__desc-link" href="#">Условия</a>
 				</div></div>
 			</div>
 			<div class="row gutter_top">
 				<div class="col-12">
-					<div class="professionals_banner">
+					<div class="midbanner">
 						<div class="row justify-content-center">Профессиональный монтаж композитной кровли</div>
 						<div class="row justify-content-center"><a href="#" class="but">Наши предложения</a></div>
 					</div>
@@ -306,25 +271,25 @@
 			</div>
 		</div>
 	</section>
-	<section class="news gradient_bg gutter_top gutter_bottom">
+	<section class="b-news gradient_bg gutter_top gutter_bottom">
 					<div class="container">
 						<div class="row">
 					<div class="col-12">
-					<div class="news_tabs">
-						<a href="#" class="gradient text">Новости</a>
-						<a href="">Акции</a>
-						<a href="">Публикации</a>
+					<div class="b-news__tabs">
+						<a class="b-news__tabs-link active" href="#">Новости</a>
+						<a class="b-news__tabs-link" href="#">Акции</a>
+						<a class="b-news__tabs-link" href="#">Публикации</a>
 					</div>
 					<div class="counter"></div>
-					<div id="slider_index4" class="owl-carousel slider_index2">
-						<div class="news_item">
-							<div class="news_item_img">
+					<div id="slider_index4" class="owl-carousel b-collections__slider">
+						<div class="b-news__item">
+							<div class="b-news__item-img">
 								<img src="img/news1.png" alt="slider_index4">
 							</div>
-							<div class="news_item_disc">
-								<div class="news_item_date">5 января</div>
-								<a class="news_item_head">Юбилей — 20 лет!</a>
-								<div class="news_item_txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
+							<div class="b-news__item-desc">
+								<div class="b-news__item-date">5 января</div>
+								<a class="b-news__item-head">Юбилей — 20 лет!</a>
+								<div class="b-news__item-txt">1 декабря компания Metrotile Europe отметила свое 20-летие. Мероприятие прошло в г. Тонгерен, Бельгия. </div>
 							</div>
 						</div>
 						<div class="news_item">
