--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>OptimizedHTML 4</title>
+	<title>Главная</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -555,7 +555,7 @@
 						<div class="b-seo__block-gradient">
 						</div>
 							<div class="b-seo__block">
-								<p>Кровля Metrotile — это многослойный материал, состоящий в своем основании из качественного листа стали с защитным покрытием из алюцинка, крошки из гранул натурального камня и акриловой глазури. </p>
+								<p class="b-seo__block-padding">Кровля Metrotile — это многослойный материал, состоящий в своем основании из качественного листа стали с защитным покрытием из алюцинка, крошки из гранул натурального камня и акриловой глазури. </p>
 							</div>	
 					</div>
 			</div>
@@ -581,9 +581,9 @@
 	<footer class="footer gradient_bg">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-2">
+				<div class="footer__col">
 					<div class="footer__logo">© 2014 METROTILE</div>
-					<div class="social">
+					<div class="footer__menu-social social">
 						<a class="social__link" href="#"><i class="demo-icon icon-inst"></i></a>
 						<a class="social__link" href="#"><i class="demo-icon icon-vk"></i></a>
 						<a class="social__link" href="#"><i class="demo-icon icon-facebook"></i></a>
@@ -604,7 +604,7 @@
 							<a class="footer__menu-link" href="#">Карта сайта</a>	
 					</div>
 				</div>
-				<div class="offset-md-1 col-md-2">
+				<div class="footer__col">
 					<div class="footer__menu">
 							<a class="footer__menu-link" href="#">— MetroBond</a>
 							<a class="footer__menu-link" href="#">— MetroRoman </a>
@@ -619,7 +619,7 @@
 					<a data-fancybox data-type="ajax" data-src="call.html" href="#" class="but buy">Оставить заявку</a>
 					</div>
 				</div>
-				<div class="offset-md-1 col-md-1">
+				<div class="footer__col">
 					<div class="footer__menu">
 						<div class="footer__newitems"><a href="#" class="newitem gradient">новинки</a></div>
 							<a class="footer__menu-link" href="#">— Metrotile IPanel</a>
@@ -628,13 +628,13 @@
 							<a class="footer__menu-link" href="#">— Metrotile IShingle</a>
 					</div>
 				</div>
-				<div class="offset-md-1 col-md-2 footer__contacts">
+				<div class="footer__col footer__contacts">
 					<b class="footer__contacts-title">Адрес</b>
 					<div>105120, Москва, Костомаровский пер., д. 3, офис 423</div>
 					<input class="footer__contacts-subscribe" placeholder="Подпишитесь на новости"/>
 					<div class="footer__contacts-madein">СДЕЛАНО В <a class="footer__logo-img" href="#"></a></div>
 				</div>
-				<div class="col-md-2 footer__contacts">
+				<div class="footer__col footer__contacts">
 					<b class="footer__contacts-title">Контакты</b>
 					<a class="footer__contacts-phone" href="tel:74953634432">+7 (495) 363 44 32</a>
 					<a class="footer__contacts-phone" href="tel:74957874760">+7 (495) 787 47 60</a>
